@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-10T01:21:28Z",
+  "timestamp" : "2022-06-10T08:18:53Z",
   "count_outdated" : 292,
   "uniques_outdated" : 189,
-  "count" : 319,
-  "uniques" : 204,
+  "count" : 320,
+  "uniques" : 205,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
